# filerix

./: .gitignore  CMakeLists.txt  Makefile  README.md  changelog  filerix.pc.in  flake.nix  libfm.pc  meson.build  vcpkg.json
.github/workflows/: Release-assets.yml  Release.yml  dispatch.yml  test.yml  vitepress.yml
cmake/: CpackConfig.cmake  Zlib.cmake
docs/: .gitignore  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/guide/: getting-started.md  installation.md  logging.md
docs/guide/references/: compression.md  drives.md  filesystem.md  user.md
docs/guide/usage/: c-cmake.md  c-meson.md  c.md  cpp-cmake.md  cpp-meson.md  cpp.md  electron.md  nodejs.md  rust.md
docs/public/: sitemap.xml
docs/references/: compression.md  drives.md  filesystem.md  user.md
example/: binding.gyp
example/c+cmake/: CMakeLists.txt
example/c+cmake/src/: example.c
example/c+meson/: meson.build
example/c+meson/src/: example.c
example/cpp+cmake/: CMakeLists.txt
example/cpp+cmake/src/: example.cc
example/cpp+meson/: meson.build
example/cpp+meson/src/: example.cc
example/electron/: .eslintrc.json  .gitignore  .prettierrc.json  README.md  binding.gyp  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.web.json
example/electron/.github/workflows/: CI.yml
example/electron/src/main/: index.ts
example/electron/src/main/window/: index.ts
example/electron/src/preload/: index.ts
example/electron/src/renderer/: index.html
example/electron/src/renderer/src/: App.tsx
example/nodejs/: package-lock.json  package.json
example/nodejs+CJS/: .gitignore  README.md  package-lock.json  package.json
example/nodejs+CJS/src/: index.js
example/nodejs+CJS/src/lib/: libfm.js  wrapper.cc
example/nodejs/src/: index.js
example/nodejs/src/lib/: libfm.js  wrapper.cc
example/rust/: Cargo.toml  README.md
example/rust/src/: main.rs
example/typescript/: libfm.d.ts  libfm.ts  tsconfig.json
include/: Napi-Bindings.hpp
include/FileSystem/: DirectoryPermissions.h  DirectoryPermissions.hpp  DriveUtils.h  DriveUtils.hpp  FileInfo.h  FileInfo.hpp  FileUtils.h  FileUtils.hpp  MountUtils.hpp  UserUtils.h  UserUtils.hpp
include/Listeners/: DriveListener.h  FileListener.h
include/System/: DriveUtils.h  UserUtils.h
include/Utils/: Logger.h
include/bindings/: CompressionBinding.hpp  DrivesBinding.hpp  FilesBinding.hpp  LoggerBinding.hpp  UserBinding.hpp
include/data/: FileTypes.h  FileTypes.hpp
include/utils/: FileUtils.hpp  Logger.h  Logger.hpp
packaging/fedora/: filerix.spec
scripts/: build.sh  install.sh  uninstall.sh
src/: CMakeLists.txt
src/FileSystem/: DirectoryPermissions.c  DirectoryPermissions.cc  DriveUtils.c  DriveUtils.cc  FileUtils.c  FileUtils.cc  MountUtils.cc  UserUtils.c  UserUtils.cc
src/FileSystem/C/: DriveUtils.cc  FileUtils.cc  UserUtils.cc
src/FileSystem/Windows/: FileUtils.c
src/Listeners/: DriveListener.c  DriveListener.cc  FileListener.c  FileListener.cc
src/Listeners/C/: DriveListener.cc  FileListener.cc
src/Listeners/Windows/: DriveListener.c  FileListener.c
src/System/: DriveUtils.c  DriveUtils.cc  UserUtils.c  UserUtils.cc
src/System/Windows/: DriveUtils.c  UserUtils.c
src/Utils/: Logger.c  Logger.cc
src/json/: FileTypes.json
tests/: CMakeLists.txt
tests/include/: TestUtils.h
tests/src/: TestUtils.c  TestUtils.cc
tests/src/FileSystem/: DriveUtils_GetDeviceLabelOrUUID.c  DriveUtils_GetDeviceLabelOrUUID.cc  DriveUtils_GetDriveUsage.c  DriveUtils_GetDriveUsage.cc  DriveUtils_GetDrives.c  DriveUtils_GetDrives.cc  DriveUtils_Mount.c  DriveUtils_Mount.cc  DriveUtils_Unmount.c  DriveUtils_Unmount.cc  FileUtils_Compress.c  FileUtils_Compress.cc  FileUtils_Copy.c  FileUtils_Copy.cc  FileUtils_Cut.c  FileUtils_Cut.cc  FileUtils_Decompress.c  FileUtils_Decompress.cc  FileUtils_GetFiles.c  FileUtils_GetFiles.cc  FileUtils_Rename.c  FileUtils_Rename.cc  FileUtils_SearchFiles.c  FileUtils_SearchFiles.cc  UserUtils_ChangePermissions.c  UserUtils_ChangePermissions.cc  UserUtils_GetUserName.c  UserUtils_GetUserName.cc
windows/: NSIS.template.in
